--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<img src="https://avatars1.githubusercontent.com/u/17224266?v=3&s=460" alt="sri profile pic" />
 			</a>
 			<h1>Carlos Arriaga</h1>
-			<h2>Android developer and Web designer,</h2>
+			<h2>Android developer and Web designer.</h2>
 		</header>
 		<div class="profile-bio">
 			<p>18 years old</p>
