--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<h2 class="titulo">Contact with me</h2>
 				<div class="cajaform">
 				<div class="mitad-izquierda">
-					<input type="text" name="nombre" placeholder="Your nombre" required>
+					<input type="text" name="nombre" placeholder="Your name" required>
 				</div>
 				<div class="mitad-derecha">
 					<input type="email" name="correo" placeholder="Your E-mail" required>
