--- a/devices/y560.html
+++ b/devices/y560.html
@@ -52,7 +52,7 @@
     <tr>
       <td>y560<br/><small class="md5">Huawei Y5</small></td>
       <td><a href="">Post</a></td>
-      <td>Los 13.0</td>
+      <td>LineageOS 13.0</td>
       <td>
         &nbsp; <b>Download</b>: 
         <a href="https://androidfilehost.com/?fid=961840155545581622">lineage-13.0-20170713-UNOFFICIAL-y560.zip</a>
