--- a/devices/rolex.html
+++ b/devices/rolex.html
@@ -48,18 +48,31 @@
     </tr>
   </thead>
   <tbody>
-
+    <!-- TWPR -->
     <tr>
       <td>rolex<br/><small class="md5">Xiaomi Redmi 4A</small></td>
       <td><a href="">Post</a></td>
       <td>TWRP 3.1.1-0</td>
       <td>
         &nbsp; <b>Download</b>: 
-        <a href="https://androidfilehost.com/?fid=961840155545581694">twrp-3.1.1-0-rolex.img</a>
+        <a href="">twrp-3.1.1-0-rolex.img</a>
         <br/>
       </td>
       <td>31.6MB</td>
       <td>Jul 13, 2017 | 10:22PM</td>
+    </tr>
+    <!-- LineageOS 13.0 -->
+    <tr>
+      <td>rolex<br/><small class="md5">Xiaomi Redmi 4A</small></td>
+      <td><a href="">Post</a></td>
+      <td>LineageOS 13.0</td>
+      <td>
+        &nbsp; <b>Download</b>: 
+        <a href="https://www.androidfilehost.com/?fid=673368273298972072">lineage-13.0-20170716-UNOFFICIAL-rolex.zip</a>
+        <br/>
+      </td>
+      <td>459MB</td>
+      <td>Jul 16, 2017 | 11:28AM</td>
     </tr>
   </tbody>
 </table>
