--- a/devices/rolex.html
+++ b/devices/rolex.html
@@ -64,7 +64,7 @@
     <!-- LineageOS 13.0 -->
     <tr>
       <td>rolex<br/><small class="md5">Xiaomi Redmi 4A</small></td>
-      <td><a href="">Post</a></td>
+      <td><a href="https://forum.xda-developers.com/android/development/rom-lineageos-13-0-redmi-4a-t3637678">Post</a></td>
       <td>LineageOS 13.0</td>
       <td>
         &nbsp; <b>Download</b>: 
