--- a/devices/rolex.html
+++ b/devices/rolex.html
@@ -65,7 +65,7 @@
     <tr>
       <td>rolex<br/><small class="md5">Xiaomi Redmi 4A</small></td>
       <td><a href="https://forum.xda-developers.com/android/development/rom-lineageos-13-0-redmi-4a-t3637678">Post</a></td>
-      <td>LineageOS 13.0</td>
+      <td>LineageOS (6.0.1)</td>
       <td>
         &nbsp; <b>Download</b>: 
         <a href="https://www.androidfilehost.com/?fid=673368273298972072">lineage-13.0-20170716-UNOFFICIAL-rolex.zip</a>
@@ -73,6 +73,19 @@
       </td>
       <td>459MB</td>
       <td>Jul 16, 2017 | 11:28AM</td>
+    </tr>
+    <!-- Resurrection Remix -->
+    <tr>
+      <td>rolex<br/><small class="md5">Xiaomi Redmi 4A</small></td>
+      <td><a href="">Post</a></td>
+      <td>Resurrection Remix (6.0.1)</td>
+      <td>
+        &nbsp; <b>Download</b>: 
+        <a href="https://www.androidfilehost.com/?fid=673368273298972163">ResurrectionRemix-M-v5.7.4-20170716-rolex.zip</a>
+        <br/>
+      </td>
+      <td>464.5MB</td>
+      <td>Jul 16, 2017 | 07:47PM</td>
     </tr>
   </tbody>
 </table>
