--- a/devices/rolex.html
+++ b/devices/rolex.html
@@ -74,6 +74,19 @@
       <td>458.8MB</td>
       <td>Jul 25, 2017 | 11:12AM</td>
     </tr>
+    <!-- AOKP MM -->
+    <tr>
+      <td>rolex<br/><small class="md5">Xiaomi Redmi 4A</small></td>
+      <td><a href="https://forum.xda-developers.com/android/development/rom-lineageos-13-0-redmi-4a-t3637678">Post</a></td>
+      <td>AOKP (6.0.1)</td>
+      <td>
+        &nbsp; <b>Download</b>: 
+        <a href="https://www.androidfilehost.com/?fid=817550096634788581">aokp_rolex_mm_unofficial_2017-07-25_1655.zip</a>
+        <br/>
+      </td>
+      <td>474.3MB</td>
+      <td>Jul 25, 2017 | 02:15PM</td>
+    </tr>
   </tbody>
 </table>
       </div>
