--- a/devices/rolex.html
+++ b/devices/rolex.html
@@ -77,15 +77,15 @@
     <!-- AOKP MM -->
     <tr>
       <td>rolex<br/><small class="md5">Xiaomi Redmi 4A</small></td>
-      <td><a href="https://forum.xda-developers.com/android/development/rom-lineageos-13-0-redmi-4a-t3637678">Post</a></td>
+      <td><a href="">Post</a></td>
       <td>AOKP (6.0.1)</td>
       <td>
         &nbsp; <b>Download</b>: 
-        <a href="https://www.androidfilehost.com/?fid=745425885120751432">aokp_rolex_mm_unofficial_2017-07-26_0052.zip</a>
+        <a href="https://www.androidfilehost.com/?fid=889764386195918812">aokp_rolex_mm_unofficial_2017-07-26_2315.zip</a>
         <br/>
       </td>
-      <td>474.3MB</td>
-      <td>Jul 25, 2017 | 08:25PM</td>
+      <td>474.5MB</td>
+      <td>Jul 26, 2017 | 07:56PM</td>
     </tr>
   </tbody>
 </table>
