--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 				<h2 class="subtitulo">18 years old<br>
 						      México City<br>
 						      Student<br>
-						      "I ❤ My Girlfriend"</h2>
+						      "I ❤ My Girlfriend"<br>
+						      Donations: <a href="https://www.paypal.me/CarlosArriagaCM">HERE</a></h2>
 			</div>
 		</div>
 	</section><center>
