--- a/devices/rolex.html
+++ b/devices/rolex.html
@@ -48,19 +48,6 @@
     </tr>
   </thead>
   <tbody>
-    <!-- TWPR -->
-    <tr>
-      <td>rolex<br/><small class="md5">Xiaomi Redmi 4A</small></td>
-      <td><a href="">Post</a></td>
-      <td>TWRP 3.1.1-0</td>
-      <td>
-        &nbsp; <b>Download</b>: 
-        <a href="">twrp-3.1.1-0-rolex.img</a>
-        <br/>
-      </td>
-      <td>31.6MB</td>
-      <td>Jul 13, 2017 | 10:22PM</td>
-    </tr>
     <!-- LineageOS 13.0 -->
     <tr>
       <td>rolex<br/><small class="md5">Xiaomi Redmi 4A</small></td>
@@ -68,11 +55,11 @@
       <td>LineageOS (6.0.1)</td>
       <td>
         &nbsp; <b>Download</b>: 
-        <a href="https://www.androidfilehost.com/?fid=817550096634788520">lineage-13.0-20170725-UNOFFICIAL-rolex.zip</a>
+        <a href="https://androidfilehost.com/?fid=673368273298974717">lineage-13.0-20170727-UNOFFICIAL-CarlosArriaga-rolex.zip</a>
         <br/>
       </td>
-      <td>458.8MB</td>
-      <td>Jul 25, 2017 | 11:12AM</td>
+      <td>459MB</td>
+      <td>Jul 27, 2017 | 05:28PM</td>
     </tr>
     <!-- AOKP MM -->
     <tr>
