--- a/devices/rolex.html
+++ b/devices/rolex.html
@@ -48,6 +48,19 @@
     </tr>
   </thead>
   <tbody>
+    <!-- TWPR -->
+    <tr>
+      <td>rolex<br/><small class="md5">Xiaomi Redmi 4A</small></td>
+      <td><a href="">Post</a></td>
+      <td>TWRP 3.1.1-0</td>
+      <td>
+        &nbsp; <b>Download</b>: 
+        <a href="https://www.androidfilehost.com/?fid=745425885120753055">twrp-3.1.1-0-rolex.img</a>
+        <br/>
+      </td>
+      <td>31.6MB</td>
+      <td>Aug 02, 2017 | 06:34PM</td>
+    </tr>
     <!-- LineageOS 13.0 -->
     <tr>
       <td>rolex<br/><small class="md5">Xiaomi Redmi 4A</small></td>
