--- a/devices/rolex.html
+++ b/devices/rolex.html
@@ -68,11 +68,11 @@
       <td>LineageOS (6.0.1)</td>
       <td>
         &nbsp; <b>Download</b>: 
-        <a href="https://www.androidfilehost.com/?fid=673368273298977105">lineage-13.0-20170807-UNOFFICIAL-CarlosArriaga-rolex.zip</a>
+        <a href="https://www.androidfilehost.com/?fid=673368273298978800">lineage-13.0-20170815-UNOFFICIAL-rolex.zip</a>
         <br/>
       </td>
       <td>459MB</td>
-      <td>Aug 07, 2017 | 09:19AM</td>
+      <td>Aug 14, 2017 | 11:45PM</td>
     </tr>
     <!-- AOKP MM -->
     <tr>
