--- a/devices/rolex.html
+++ b/devices/rolex.html
@@ -87,6 +87,20 @@
       <td>474.5MB</td>
       <td>Jul 26, 2017 | 07:56PM</td>
     </tr>
+    </tr>
+    <!-- RR MM -->
+    <tr>
+      <td>rolex<br/><small class="md5">Xiaomi Redmi 4A</small></td>
+      <td><a href="">Post</a></td>
+      <td>Resurrection Remix (6.0.1)</td>
+      <td>
+        &nbsp; <b>Download</b>: 
+        <a href="https://www.androidfilehost.com/?fid=745425885120756021">ResurrectionRemix-M-v5.7.4-20170816-rolex.zip</a>
+        <br/>
+      </td>
+      <td>464.5MB</td>
+      <td>Aug 16, 2017 | 03:54PM</td>
+    </tr>
   </tbody>
 </table>
       </div>
