--- a/downloads/index.html
+++ b/downloads/index.html
@@ -33,7 +33,7 @@
         <a class="nav-link" href="https://carlosarriagacm.github.io/">Moto E 2014</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="https://carlosarriagacm.github.io/">Moto G 2013</a>
+        <a class="nav-link" href="#falcon">Moto G 2013</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="https://carlosarriagacm.github.io/">Leeco Le Pro 3</a>
@@ -128,7 +128,7 @@
                 </div>
             </div>
         </div><br><br>
-        <!-- HWY635 -->
+<!-- HWY635 -->
         <h2 class="text-center" id="hwY635"> Huawei Y635 ("hwY635")</h2>
         <hr>
         <div class="row">
@@ -219,6 +219,20 @@
                         <h3 class="card-title">AIM</h3><br><br>
                         <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: Aug 12, 2017 | 05:42PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1nxaF7"><button type="button" class="btn btn-primary btn-block">Download</button></a>
+                    </div>
+                </div>
+            </div>
+        </div><br><br>
+<!-- falcon -->
+        <h2 class="text-center" id="falcon">Moto G 2013 ("falcon")</h2>
+        <hr>
+        <div class="row">
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <div class="card-block">
+                        <h3 class="card-title">LineageOS 15.0</h3><br><br>
+                        <p class="card-text">Android Version: 8.0.0</p> <p class="card-text">Date: Sep 03, 2017 | 04:50PM</p> <p class="card-text">Gapps: ------</p>
+                        <a href="http://adf.ly/1o4Jqx"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
             </div>
