--- a/downloads/index.html
+++ b/downloads/index.html
@@ -224,15 +224,24 @@
             </div>
         </div><br><br>
 <!-- falcon -->
-        <h2 class="text-center" id="falcon">Moto G 2013 ("falcon")</h2>
+        <h2 class="text-center" id="falcon">Moto G 2013</h2>
         <hr>
         <div class="row">
             <div class="col-md-6 col-lg-3">
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">LineageOS 15.0</h3><br><br>
-                        <p class="card-text">Android Version: 8.0.0</p> <p class="card-text">Date: Sep 03, 2017 | 04:50PM</p> <p class="card-text">Gapps: ------</p>
+                        <p class="card-text">Android Version: 8.0.0</p> <p class="card-text">Date: Sep 03, 2017 | 04:50PM</p> <p class="card-text">For "FALCON"</p>
                         <a href="http://adf.ly/1o4Jqx"><button type="button" class="btn btn-primary btn-block">Download</button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <div class="card-block">
+                        <h3 class="card-title">LineageOS 15.0</h3><br><br>
+                        <p class="card-text">Android Version: 8.0.0</p> <p class="card-text">Date: Sep 03, 2017 | 04:50PM</p> <p class="card-text">For "PEREGRINE"</p>
+                        <a href="http://adf.ly/1o4hW8"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
             </div>
