--- a/downloads/index.html
+++ b/downloads/index.html
@@ -232,7 +232,7 @@
                     <div class="card-block">
                         <h3 class="card-title">LineageOS 15.0</h3><br><br>
                         <p class="card-text">Android Version: 8.0.0</p> <p class="card-text">Date: Sep 03, 2017 | 04:50PM</p> <p class="card-text">For "FALCON"</p>
-                        <a href="http://adf.ly/1o4Jqx"><button type="button" class="btn btn-primary btn-block">Download</button></a>
+                        <a href="https://www.androidfilehost.com/?w=files&flid=211973"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
             </div>
@@ -241,7 +241,7 @@
                     <div class="card-block">
                         <h3 class="card-title">LineageOS 15.0</h3><br><br>
                         <p class="card-text">Android Version: 8.0.0</p> <p class="card-text">Date: Sep 03, 2017 | 04:50PM</p> <p class="card-text">For "PEREGRINE"</p>
-                        <a href="http://adf.ly/1o4hW8"><button type="button" class="btn btn-primary btn-block">Download</button></a>
+                        <a href="https://www.androidfilehost.com/?w=files&flid=212398"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
             </div>
