--- a/downloads/index.html
+++ b/downloads/index.html
@@ -27,7 +27,7 @@
         <a class="nav-link" href="#hwY635">Huawei Y635</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="https://carlosarriagacm.github.io/">Moto E 2015</a>
+        <a class="nav-link" href="#otus">Moto E 2015</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="https://carlosarriagacm.github.io/">Moto E 2014</a>
@@ -79,51 +79,6 @@
                         <h3 class="card-title">Resurrection</h3><br><br>
                         <p class="card-text">Android Version: 6.0.1</p> <p class="card-text">Date: Aug 16, 2017 | 03:54PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1o3A4U"><button type="button" class="btn btn-primary btn-block">Download</button></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card">
-                    <div class="card-block">
-                        <h3 class="card-title">LineageOS 14.1</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: - - - - -</p> <p class="card-text">Gapps: http://opengapps.org/</p>
-                        <a href=""><button type="button" class="btn btn-primary btn-block">Download</button></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card">
-                    <div class="card-block">
-                        <h3 class="card-title">Resurrection</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: - - - - -</p> <p class="card-text">Gapps: http://opengapps.org/</p>
-                        <a href=""><button type="button" class="btn btn-primary btn-block">Download</button></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card">
-                    <div class="card-block">
-                        <h3 class="card-title">XPerience</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: - - - - -</p> <p class="card-text">Gapps: http://opengapps.org/</p>
-                        <a href=""><button type="button" class="btn btn-primary btn-block">Download</button></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card">
-                    <div class="card-block">
-                        <h3 class="card-title">CrDroid</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: - - - - -</p> <p class="card-text">Gapps: http://opengapps.org/</p>
-                        <a href=""><button type="button" class="btn btn-primary btn-block">Download</button></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card">
-                    <div class="card-block">
-                        <h3 class="card-title">AOSP-CAF</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: - - - - -</p> <p class="card-text">Gapps: http://opengapps.org/</p>
-                        <a href=""><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
             </div>
@@ -242,6 +197,19 @@
                         <h3 class="card-title">LineageOS 15.0</h3><br><br>
                         <p class="card-text">Android Version: 8.0.0</p> <p class="card-text">Date: Sep 03, 2017 | 04:50PM</p> <p class="card-text">For "PEREGRINE"</p>
                         <a href="https://www.androidfilehost.com/?w=files&flid=212398"><button type="button" class="btn btn-primary btn-block">Download</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+<!-- otus --><br><br>
+        <h2 class="text-center" id="otus">Moto E 2015</h2>
+        <hr>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <div class="card-block">
+                        <h3 class="card-title">LineageOS 15.0</h3><br><br>
+                        <p class="card-text">Android Version: 8.0.0</p> <p class="card-text">Date: Sep 24, 2017 | 11:14PM</p> <p class="card-text">For "OTUS"</p>
+                        <a href="https://www.androidfilehost.com/?w=files&flid=217987"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
             </div>
