--- a/downloads/index.html
+++ b/downloads/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
+
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -36,7 +39,7 @@
         <a class="nav-link" href="#falcon">Moto G 2013</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="https://carlosarriagacm.github.io/">Leeco Le Pro 3</a>
+        <a class="nav-link" href="https://carlosarriagacm.github.io/">Moto G4 Play</a>
       </li>
     </ul>
   </div>
@@ -52,14 +55,14 @@
     <div class="container text-muted">
 
         <!-- ROLEX -->
-        <h2 class="text-center" id="rolex"> Xiaomi Redmi 4A ("rolex")</h2>
+        <h2 class="text-center" id="rolex"> Xiaomi Redmi 4A </h2>
         <hr>
         <div class="row">
             <div class="col-md-6 col-lg-3">
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">LineageOS 13.0</h3><br><br>
-                        <p class="card-text">Android Version: 6.0.1</p> <p class="card-text">Date: Aug 14, 2017 | 11:45PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 6.0.1</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Aug 14, 2017 | 11:45PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1o39yW"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
@@ -68,7 +71,7 @@
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">AOKP</h3><br><br>
-                        <p class="card-text">Android Version: 6.0.1</p> <p class="card-text">Date: Jul 29, 2017 | 06:16AM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 6.0.1</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Jul 29, 2017 | 06:16AM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1o3A3C"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
@@ -77,21 +80,21 @@
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">Resurrection</h3><br><br>
-                        <p class="card-text">Android Version: 6.0.1</p> <p class="card-text">Date: Aug 16, 2017 | 03:54PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 6.0.1</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Aug 16, 2017 | 03:54PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1o3A4U"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
             </div>
         </div><br><br>
 <!-- HWY635 -->
-        <h2 class="text-center" id="hwY635"> Huawei Y635 ("hwY635")</h2>
+        <h2 class="text-center" id="hwY635"> Huawei Y635 </h2>
         <hr>
         <div class="row">
             <div class="col-md-6 col-lg-3">
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">LineageOS 14.1</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: Aug 13, 2017 | 03:12PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 7.1.2</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Aug 13, 2017 | 03:12PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1nxaFd"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
@@ -100,7 +103,7 @@
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">CrDroid</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: Aug 24, 2017 | 02:43PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 7.1.2</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Aug 24, 2017 | 02:43PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1nxaAh"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
@@ -109,7 +112,7 @@
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">AOSP-CAF</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: Aug 06, 2017 | 05:39PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 7.1.2</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Aug 06, 2017 | 05:39PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1nxaA1"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
@@ -118,7 +121,7 @@
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">ViperOS</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: Aug 06, 2017 | 10:42PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 7.1.2</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Aug 06, 2017 | 10:42PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1nxaCc"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
@@ -127,7 +130,7 @@
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">Resurrection</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: Aug 20, 2017 | 08:34AM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 7.1.2</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Aug 20, 2017 | 08:34AM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1nxaBY"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
@@ -136,7 +139,7 @@
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">XPerience</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: Aug 07, 2017 | 08:05PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 7.1.2</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Aug 07, 2017 | 08:05PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1nxaDA"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
@@ -145,7 +148,7 @@
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">AICP</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: Aug 09, 2017 | 08:28AM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 7.1.2</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Aug 09, 2017 | 08:28AM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1nxaDS"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
@@ -154,7 +157,7 @@
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">Cosmic-OS</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: Aug 09, 2017 | 03:25PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 7.1.2</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Aug 09, 2017 | 03:25PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1nxaE2"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
@@ -163,7 +166,7 @@
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">AOKP</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: Aug 12, 2017 | 03:51PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 7.1.2</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Aug 12, 2017 | 03:51PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1nxaEo"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
@@ -172,21 +175,21 @@
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">AIM</h3><br><br>
-                        <p class="card-text">Android Version: 7.1.2</p> <p class="card-text">Date: Aug 12, 2017 | 05:42PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 7.1.2</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Aug 12, 2017 | 05:42PM</p> <p class="card-text">Gapps: http://opengapps.org/</p>
                         <a href="http://adf.ly/1nxaF7"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
             </div>
         </div><br><br>
 <!-- falcon -->
-        <h2 class="text-center" id="falcon">Moto G 2013</h2>
+        <h2 class="text-center" id="falcon"> Moto G 2013 </h2>
         <hr>
         <div class="row">
             <div class="col-md-6 col-lg-3">
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">LineageOS 15.0</h3><br><br>
-                        <p class="card-text">Android Version: 8.0.0</p> <p class="card-text">Date: Sep 03, 2017 | 04:50PM</p> <p class="card-text">For "FALCON"</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 8.0.0</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Sep 03, 2017 | 04:50PM</p> <p class="card-text">For "FALCON"</p>
                         <a href="https://www.androidfilehost.com/?w=files&flid=211973"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
@@ -195,20 +198,20 @@
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">LineageOS 15.0</h3><br><br>
-                        <p class="card-text">Android Version: 8.0.0</p> <p class="card-text">Date: Sep 03, 2017 | 04:50PM</p> <p class="card-text">For "PEREGRINE"</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 8.0.0</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Sep 03, 2017 | 04:50PM</p> <p class="card-text">For "PEREGRINE"</p>
                         <a href="https://www.androidfilehost.com/?w=files&flid=212398"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
             </div>
         </div>
 <!-- otus --><br><br>
-        <h2 class="text-center" id="otus">Moto E 2015</h2>
+        <h2 class="text-center" id="otus"> Moto E 2015 </h2>
         <hr>
             <div class="col-md-6 col-lg-3">
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">LineageOS 15.0</h3><br><br>
-                        <p class="card-text">Android Version: 8.0.0</p> <p class="card-text">Date: Sep 24, 2017 | 11:14PM</p> <p class="card-text">For "OTUS"</p>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 8.0.0</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Sep 24, 2017 | 11:14PM</p> <p class="card-text">For "OTUS"</p>
                         <a href="https://www.androidfilehost.com/?w=files&flid=217987"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
@@ -216,12 +219,12 @@
         </div>
 
         <div class="card my-5 p-3">
-
+          <center>
           <h4 class="card-title">Donations!</h4>
           <h6 class="card-subtitle mb-2 text-muted">If you enjoy using my Roms consider a donation.</h6>
           <p class="card-text">Donations help us get new devices and add them to our supported list, pay for server costs, and make the ROM experience better in everyway.</p> 
           <a href="https://paypal.me/CarlosArriagaCM" class="card-link text-center"><button type="button" class="btn btn-success">Donate here</button></a>
- 
+          </center>
         </div>
 
 </div><!-- end .container -->
