--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<h3>Moto G 2013</h3>
 			</div>
 			<div class="servicio">
-				<h3>Leeco Le Pro 3</h3>
+				<h3>Moto G4 Play</h3>
 			</div>
 		</div>
 	</section><br><br><br>
