--- a/downloads/index.html
+++ b/downloads/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-
+    <title>Downloads</title>
 
     <!-- Fontawesome -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
