--- a/downloads/index.html
+++ b/downloads/index.html
@@ -197,9 +197,45 @@
             <div class="col-md-6 col-lg-3">
                 <div class="card">
                     <div class="card-block">
+                        <h3 class="card-title">CypherOS</h3><br><br>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 8.0.0</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Sep 27, 2017 | 11:01AM</p> <p class="card-text">For "FALCON"</p>
+                        <a href="https://www.androidfilehost.com/?w=files&flid=216332"><button type="button" class="btn btn-primary btn-block">Download</button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <div class="card-block">
+                        <h3 class="card-title">AospExtended</h3><br><br>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 8.0.0</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Sep-28-2017, 09:24AM</p> <p class="card-text">For "FALCON"</p>
+                        <a href="https://www.androidfilehost.com/?w=files&flid=216325"><button type="button" class="btn btn-primary btn-block">Download</button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <div class="card-block">
                         <h3 class="card-title">LineageOS 15.0</h3><br><br>
                         <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 8.0.0</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Sep 03, 2017 | 04:50PM</p> <p class="card-text">For "PEREGRINE"</p>
                         <a href="https://www.androidfilehost.com/?w=files&flid=212398"><button type="button" class="btn btn-primary btn-block">Download</button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <div class="card-block">
+                        <h3 class="card-title">CypherOS</h3><br><br>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 8.0.0</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Sep 27, 2017 | 09:26PM</p> <p class="card-text">For "PEREGRINE"</p>
+                        <a href="https://www.androidfilehost.com/?w=files&flid=216335"><button type="button" class="btn btn-primary btn-block">Download</button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <div class="card-block">
+                        <h3 class="card-title">AospExtended</h3><br><br>
+                        <p class="card-text"><i class="fa fa-android" aria-hidden="true"></i> Android Version: 8.0.0</p> <p class="card-text"><i class="fa fa-clock-o" aria-hidden="true"></i> Date: Sep-28-2017, 11:31AM</p> <p class="card-text">For "PEREGRINE"</p>
+                        <a href="https://www.androidfilehost.com/?w=files&flid=216327"><button type="button" class="btn btn-primary btn-block">Download</button></a>
                     </div>
                 </div>
             </div>
