--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							</p>
 							<p>
 							<strong>+ Country:</strong> Mexico City.<br>
-							<strong>+ Student:</strong> Ing. Robotic.<br>
+							<strong>+ Student:</strong> Robotic Eng.<br>
 							<strong>+ Years:</strong> 19.
 							</p> 
 						</div>
