--- a/G2013.html
+++ b/G2013.html
@@ -18,11 +18,15 @@
 			</header>
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Moto G 2013 (falcon and peregrine)</h1>
+							<h1 style="display:inline;">Motorola Moto G 2013</h1>
+							<p>
+							<strong>+ Moto G 2013 3G:</strong> falcon.<br>
+							<strong>+ Moto G 2013 4G:</strong> peregrine.<br>
+							<strong>+ Credits:</strong> luk1337,luca020400 and other people for work in MSM8226.
+							</p> 
 		<!-- Table -->
 			<section>
 				<div class="table-wrapper">
@@ -42,8 +46,8 @@
 						<tfoot>
 						</tfoot>
 					</table>
-							<a href="https://www.paypal.me/CarlosArriagaCM" class="button fit icon fa-download">Donate</a>
-				</div>
+				</div><br>
+				<a href="https://www.paypal.me/CarlosArriagaCM" class="button fit icon fa-download">Donate</a>
 			</section>
 			</div>
         </section>
