--- a/MOTOE4QCOM-RR.html
+++ b/MOTOE4QCOM-RR.html
@@ -21,9 +21,9 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 style="display:inline;">Motorola Moto E 2015</h1>
+							<h1 style="display:inline;">Motorola Moto E4 (Qualcomm)</h1>
 							<p>
-							<strong>+ Credits:</strong> percy-g2,squid2,scritch007,ashwinr64 and other people for work in MSM8610.
+							<strong>+ Credits:</strong> squid2 and other people for work in MSM8937.
 							</p> 
 		<!-- Table -->
 			<section>
@@ -31,14 +31,9 @@
 					<table>
 						<tbody>
 							<tr>
-								<td>lineage-15.1-20171224_011944-UNOFFICIAL-otus.zip</td>
-								<td><a href="https://sourceforge.net/projects/motoe2015/files/Lineage-15.1/lineage-15.1-20171224_011944-UNOFFICIAL-otus.zip/download" class="button  icon fa-download">Download</a></td>
-								<td><a href="https://forum.xda-developers.com/moto-e-2015/development/rom-lineageos-15-0-moto-e-2015-3g-t3678791" class="button  icon fa-download">XDA</a></td>
-							</tr>
-							<tr>
-								<td>lineage-15.1-20171223_011547-UNOFFICIAL-otus.zip</td>
-								<td><a href="https://sourceforge.net/projects/motoe2015/files/Lineage-15.1/lineage-15.1-20171223_011547-UNOFFICIAL-otus.zip/download" class="button  icon fa-download">Download</a></td>
-								<td><a href="https://forum.xda-developers.com/moto-e-2015/development/rom-lineageos-15-0-moto-e-2015-3g-t3678791" class="button  icon fa-download">XDA</a></td>							
+								<td>RR-N-v5.8.5-20171206-perry-Unofficial.zip</td>
+								<td><a href="https://androidfilehost.com/?fid=745849072291693270" class="button  icon fa-download">Download</a></td>
+								<td><a href="https://forum.xda-developers.com/moto-e4/moto-e4-qualcomm-roms-kernels-recoveries--other-development/rom-resurrection-remix-moto-e4-t3689903" class="button  icon fa-download">XDA</a></td>
 							</tr>							
 						</tbody>
 						<tfoot>
