EsromTech website BringUp

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Carlos Arriaga</title>
+		<title>Esrom Cattaneo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -13,8 +13,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">My works</a></li>
-							<li><a href="Donations.html">Donations</a></li>
+							<li><a href="#one">Downloads</a></li>
+							<li><a href="Donate.html">Donate</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -24,100 +24,33 @@
 	<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1 style="display:inline;">Carlos Arriaga</h1>
-							<p><strong>Welcome to my official website,<br/>
-							here you will find all my recent works.</strong><br>
+							<h1 style="display:inline;">Esrom Cattaneo</h1>
+							<p><strong>Android developer,<br/>
+							ViperOS Team, ToxycOS Team and Rattlesnake kernel.</strong><br>
 							</p>
-							<p>
-							<strong>+ Country:</strong> México City.<br>
-							<strong>+ Student:</strong> Robotic Eng.<br>
-							<strong>+ Years:</strong> 19.<br>
-							<strong>+ Devices:</strong> Redmi 4A, Moto G 2013.
-							</p> 
-						</div>
 					</section>
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a class="image"><img src="images/lineage.png" alt="" data-position="25% 25%" /></a>
+							<a class="image"><img src="images/surnia.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>LineageOS (8.1.0) For Motorola Moto G 2013</h2>
-									<p>Unofficial builds for Moto G 2013<br>+ codename: falcon<br>+ codename: peregrine</p>
+									<h2>Motorola Moto E 2015 LTE</h2>
+									<p>All builds for Moto E 2015 LTE<br>+ codename: surnia</p>
 									<ul class="actions">
-										<li><a href="G2013.html" class="button">More...</a></li>
+										<li><a href="surnia.html" class="button">Show all builds...</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a class="image"><img src="images/lineage.png" alt="" data-position="25% 25%" /></a>
+							<a class="image"><img src="images/j500.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>LineageOS (8.1.0) For Motorola Moto E 2015 3G</h2>
-									<p>Unofficial builds for Moto E 2015 3G<br>+ codename: otus</p>
+									<h2>Samsung Galaxy J5 2015 Series</h2>
+									<p>All builds for Galaxy J5 2015 Series<br>+ codename: j5lte, j5nlte, j5ltechn, j53gxx</p>
 									<ul class="actions">
-										<li><a href="E2015.html" class="button">More...</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a class="image"><img src="images/lineage.png" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>LineageOS (7.1.2) For Xiaomi Redmi 4A</h2>
-									<p>Unofficial builds for Redmi 4A<br>+ codename: rolex</p>
-									<ul class="actions">
-										<li><a href="REDMI4A-LOS.html" class="button">More...</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a class="image"><img src="images/aex.png" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>AospExtended (7.1.2) For Xiaomi Redmi 4A</h2>
-									<p>Unofficial builds for Redmi 4A<br>+ codename: rolex</p>
-									<ul class="actions">
-										<li><a href="REDMI4A-AEX.html" class="button">More...</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a class="image"><img src="images/rr.png" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>ResurrectionRemix (7.1.2) For Xiaomi Redmi 4A</h2>
-									<p>Unofficial builds for Redmi 4A<br>+ codename: rolex</p>
-									<ul class="actions">
-										<li><a href="REDMI4A-RR.html" class="button">More...</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a class="image"><img src="images/rr.png" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>ResurrectionRemix (7.1.2) For Motorola Moto E4 (Qcom)</h2>
-									<p>Unofficial builds for Moto E4<br>+ codename: perry</p>
-									<ul class="actions">
-										<li><a href="MOTOE4QCOM-RR.html" class="button">More...</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a class="image"><img src="images/lineage.png" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>LineageOS (7.1.2) For Motorola Moto E4 (Mtk)</h2>
-									<p>Unofficial builds for Moto E4<br>+ codename: woods</p>
-									<ul class="actions">
-										<li><a href="MOTOE4MTK-LOS.html" class="button">More...</a></li>
+										<li><a href="j500.html" class="button">Show all builds...</a></li>
 									</ul>
 								</div>
 							</div>
